src/objects/Health_Score_Elements__mdt.object
<CustomObject>
    <description>This contains different elements captured for Account Health Scores</description>
    <fields>
        <fullName>Display_Fields__c</fullName>
        <label>Display Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Element_Section__c</fullName>
        <label>Element Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Score_Record_Type__c</fullName>
        <label>Health Score Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Health Score</fullName>
                    <default>true</default>
                    <label>Account Health Score</label>
                </value>
                <value>
                    <fullName>Program Health Score</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Segment__c</fullName>
        <label>Health Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member Satisfaction</fullName>
                    <default>true</default>
                    <label>Member Satisfaction</label>
                </value>
                <value>
                    <fullName>Enrollment</fullName>
                </value>
                <value>
                    <fullName>Activation</fullName>
                </value>
                <value>
                    <fullName>Active 30</fullName>
                </value>
                <value>
                    <fullName>Marketing Type (Outreach Stratification)</fullName>
                </value>
                <value>
                    <fullName>Email Coverage</fullName>
                </value>
                <value>
                    <fullName>Population Refresh</fullName>
                </value>
                <value>
                    <fullName>eHba1c Reduction</fullName>
                </value>
                <value>
                    <fullName>ROI Status</fullName>
                </value>
                <value>
                    <fullName>Client Launch Date</fullName>
                </value>
                <value>
                    <fullName>Systolic BP Reduction</fullName>
                </value>
                <value>
                    <fullName>Diastolic BP Reduction</fullName>
                </value>
                <value>
                    <fullName>Program Score</fullName>
                </value>
                <value>
                    <fullName>Renewal Timing</fullName>
                </value>
                <value>
                    <fullName>Cross Sells/Expansions</fullName>
                </value>
                <value>
                    <fullName>Client NPS</fullName>
                </value>
                <value>
                    <fullName>Interaction Cadence</fullName>
                </value>
                <value>
                    <fullName>Executive Sponsor Interaction/Engagement</fullName>
                </value>
                <value>
                    <fullName>Contract Path/Partner Relationship/Status</fullName>
                </value>
                <value>
                    <fullName>Client Business Health</fullName>
                </value>
                <value>
                    <fullName>Issues</fullName>
                </value>
                <value>
                    <fullName>Competitor w/in account</fullName>
                </value>
                <value>
                    <fullName>Immediate Action Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Hypertension</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health</fullName>
                    <isActive>false</isActive>
                    <label>Behavioral Health</label>
                </value>
                <value>
                    <fullName>Diabetes Prevention</fullName>
                    <isActive>false</isActive>
                    <label>Diabetes Prevention</label>
                </value>
                <value>
                    <fullName>Weight Management</fullName>
                    <isActive>false</isActive>
                    <label>Weight Management</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommended_Action_Steps__c</fullName>
        <label>Recommended Action Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Health Score Elements</label>
    <listViews>
        <fullName>All_Health_Score_Elements</fullName>
        <columns>MasterLabel</columns>
        <columns>Health_Score_Record_Type__c</columns>
        <columns>Program__c</columns>
        <columns>Health_Segment__c</columns>
        <columns>Element_Section__c</columns>
        <columns>DeveloperName</columns>
        <columns>Display_Fields__c</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Health Score Elements</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Health Score Elements</pluralLabel>
</CustomObject>